--- a/ToDo/app/templates/app/base.html
+++ b/ToDo/app/templates/app/base.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load crispy_forms_tags %}
 <html>
   <head>
     <meta charset="utf-8" />
@@ -16,11 +17,33 @@
   <body>
     {% include 'app/navbar.html' %}
     <div class="container">{% block content %} {% endblock content %}</div>
+    <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 1050">
+      {% if messages %} {% for message in messages %}
+      <div
+        class="alert alert-{{ message.tags }} alert-dismissible fade show"
+        role="alert"
+      >
+        {{ message }}
+      </div>
+    </div>
+    {% endfor %} {% endif %}
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+    <script>
+      setTimeout(function () {
+        let alerts = document.querySelectorAll(".alert");
+        alerts.forEach(function (alert) {
+          alert.classList.add("fade", "show");
+          setTimeout(() => {
+            alert.classList.remove("show");
+            alert.classList.add("hide");
+          }, 500); // Allow time for the fade-out effect
+        });
+      }, 1000);
+    </script>
   </body>
 </html>
