Todo Project - Role-based Auth and Profile Photo (image upload)  done

--- a/ToDo/app/templates/app/assigned.html
+++ b/ToDo/app/templates/app/assigned.html
@@ -3,15 +3,16 @@
   {% block page %} Welcome Back, {{request.user}} {% endblock page %}
 </h1>
 <h3 class="d-flex justify-content-around align-items-center mt-5 mb-5">
-  {% block title%} My Todos {% endblock title %}
+  {% block title%} Assigned Tasks {% endblock title %}
 </h3>
+<a class="btn btn-success mb-5" href="{% url 'create_todo' %}"> Create </a>
 <table class="table">
   <thead>
     <tr>
       <th scope="col">Task No.</th>
       <th scope="col">Title</th>
       <th scope="col">Status</th>
-      <th scope="col">Assigned by</th>
+      <th scope="col">Assigned to</th>
       <th scope="col">Priority</th>
       <th scope="col">Due Date</th>
       <th scope="col">Actions</th>
@@ -23,11 +24,13 @@
       <th scope="row">{{forloop.counter}}</th>
       <td>{{task.title}}</td>
       <td>{{task.status}}</td>
-      <td>{{task.assigned_by}}</td>
+      <td>{{task.assigned_to}}</td>
       <td>{{task.priority}}</td>
       <td>{{task.due_date}}</td>
       <td>
         <a class="btn btn-info" href="{% url 'details' task.id %}"> Details </a>
+        <a class="btn btn-warning" href="{% url 'update' task.id %}"> Edit </a>
+        <a class="btn btn-danger" href="{% url 'delete' task.id %}"> Delete </a>
       </td>
     </tr>
     {% endfor %}
