--- a/ToDo/app/templates/app/profile.html
+++ b/ToDo/app/templates/app/profile.html
@@ -2,13 +2,17 @@
 <h1 class="d-flex justify-content-center align-items-center mt-5">
   Profile Photo
 </h1>
-<h3 class="d-flex justify-content-around align-items-center mt-5 mb-5">
-  {% block title%} {{request.user}} {% endblock title %}
+<h3 class="d-flex justify-content-center align-items-center mt-5 mb-5">
+  {% block title%} Hello, {{name}}! {% endblock title %}
 </h3>
-<div class="mx-auto col-lg-4">
-  <form method="post" enctype="multipart/form-data">
-    {% csrf_token %} {{form|crispy}}
-    <input type="submit" value="Upload" class="btn btn-success" />
-  </form>
+<div class="mx-auto col-lg-2">
+  <img
+    src="{{path}}"
+    alt="Profile Picture"
+    height="320"
+    width="320"
+    style="border-radius: 100%"
+  />
+  <a class="btn btn-info" href="{% url 'upload_profile' %}"> Change Profile </a>
 </div>
 {% endblock content %}
