Todo Project - Custom Middleware and Signal to send Email done

--- a/ToDo/app/templates/app/details.html
+++ b/ToDo/app/templates/app/details.html
@@ -8,6 +8,7 @@
       </h6>
       <p class="card-text">{{task.description}}</p>
       <a href="{% url 'my_todos' %}" class="card-link">My Todos</a>
+      <a href="{% url 'assigned' %}" class="card-link">Assigned Tasks</a>
     </div>
   </div>
 </div>
