--- a/ToDo/app/templates/app/base.html
+++ b/ToDo/app/templates/app/base.html
@@ -14,9 +14,25 @@
       crossorigin="anonymous"
     />
   </head>
-  <body>
+  <body class="d-flex flex-column min-vh-100">
+    <!-- Navbar -->
     {% include 'app/navbar.html' %}
+    <!-- Content -->
     <div class="container">{% block content %} {% endblock content %}</div>
+    <!-- Footer -->
+    <footer class="mt-auto pt-3 text-center text-lg-start">
+      <div
+        class="text-center p-3"
+        style="background-color: rgba(0, 0, 0, 0.05)"
+      >
+        Last Login Time - {{request.last_login}}
+        <br />
+        Total Logins - {{request.visits}}
+        <br />
+        Total Requests Served - {{request.total_request}}
+      </div>
+    </footer>
+    <!-- Message -->
     <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 1050">
       {% if messages %} {% for message in messages %}
       <div
@@ -27,7 +43,6 @@
       </div>
     </div>
     {% endfor %} {% endif %}
-
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
