--- a/ToDo/app/templates/app/navbar.html
+++ b/ToDo/app/templates/app/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">To Do Tracker</a>
     <button
@@ -40,19 +40,14 @@
           </a>
           <ul class="dropdown-menu">
             <li>
-              <a class="dropdown-item" href="{% url 'create_todo' %}">Create</a>
+              <a class="dropdown-item" href="{% url 'show_profile' %}">View</a>
             </li>
             <li>
-              <a class="dropdown-item" href="{% url 'completed_todos' %}"
-                >Completed</a
+              <a class="dropdown-item" href="{% url 'upload_profile' %}"
+                >Edit</a
               >
             </li>
             <li><hr class="dropdown-divider" /></li>
-            <li>
-              <a class="dropdown-item" href="{% url 'show_profile' %}"
-                >Profile</a
-              >
-            </li>
             <li>
               <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
             </li>
