--- a/ToDo/app/templates/app/my_todos.html
+++ b/ToDo/app/templates/app/my_todos.html
@@ -1,17 +1,20 @@
 {% extends 'app/base.html' %} {% block content %}
 <h1 class="d-flex justify-content-center align-items-center mt-5">
-  {% block page %} Welcome Back, {{request.user}} {% endblock page %}
+  {% block page %} Welcome Back, {{request.user | upper}} {% endblock page %}
 </h1>
 <h3 class="d-flex justify-content-around align-items-center mt-5 mb-5">
   {% block title%} My Todos {% endblock title %}
 </h3>
+{% block create_button %}{% endblock %}
 <table class="table">
   <thead>
     <tr>
       <th scope="col">Task No.</th>
       <th scope="col">Title</th>
       <th scope="col">Status</th>
-      <th scope="col">Assigned by</th>
+      <th scope="col">
+        {% block assigned_by_title %}Assigned by{% endblock %}
+      </th>
       <th scope="col">Priority</th>
       <th scope="col">Due Date</th>
       <th scope="col">Actions</th>
@@ -22,12 +25,16 @@
     <tr>
       <th scope="row">{{forloop.counter}}</th>
       <td>{{task.title}}</td>
-      <td>{{task.status}}</td>
-      <td>{{task.assigned_by}}</td>
-      <td>{{task.priority}}</td>
+      <td>{{task.status | upper }}</td>
+      <td>
+        {% block assigned_by_data %} {{task.assigned_by | capfirst }}
+        {% endblock %}
+      </td>
+      <td>{{task.priority | upper }}</td>
       <td>{{task.due_date}}</td>
       <td>
         <a class="btn btn-info" href="{% url 'details' task.id %}"> Details </a>
+        {% block assign_action %} {% endblock %}
       </td>
     </tr>
     {% endfor %}
