--- a/ToDo/app/templates/app/navbar.html
+++ b/ToDo/app/templates/app/navbar.html
@@ -1,26 +1,14 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">To Do Tracker</a>
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-bs-toggle="collapse"
-      data-bs-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a
-            class="nav-link active"
-            aria-current="page"
-            href="{% url 'my_todos' %}"
-            >My Todos</a
-          >
+          <a class="nav-link active" aria-current="page" href="{% url 'my_todos' %}">My Todos</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{% url 'pending_todos' %}">Pending</a>
@@ -29,13 +17,7 @@
           <a class="nav-link" href="{% url 'assigned' %}">Assigned</a>
         </li>
         <li class="nav-item dropdown">
-          <a
-            class="nav-link dropdown-toggle"
-            href="#"
-            role="button"
-            data-bs-toggle="dropdown"
-            aria-expanded="false"
-          >
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Profile
           </a>
           <ul class="dropdown-menu">
@@ -43,26 +25,24 @@
               <a class="dropdown-item" href="{% url 'show_profile' %}">View</a>
             </li>
             <li>
-              <a class="dropdown-item" href="{% url 'upload_profile' %}"
-                >Edit</a
-              >
+              <a class="dropdown-item" href="{% url 'upload_profile' %}">Edit</a>
             </li>
-            <li><hr class="dropdown-divider" /></li>
+            <li>
+              <hr class="dropdown-divider" />
+            </li>
             <li>
               <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
             </li>
           </ul>
         </li>
       </ul>
-      <form class="d-flex" role="search">
-        <input
-          class="form-control me-2"
-          type="search"
-          placeholder="Search"
-          aria-label="Search"
-        />
+      {% if search %}
+      <form class="d-flex" role="search" method="post">
+        {% csrf_token %}
+        <input class="form-control me-2" name="search" type="search" placeholder="Search" aria-label="Search" />
         <button class="btn btn-outline-success" type="submit">Search</button>
       </form>
+      {% endif %}
     </div>
   </div>
 </nav>
