--- a/ToDo/app/templates/app/assigned.html
+++ b/ToDo/app/templates/app/assigned.html
@@ -1,40 +1,11 @@
-{% extends 'app/base.html' %} {% block content %}
-<h1 class="d-flex justify-content-center align-items-center mt-5">
-  {% block page %} Welcome Back, {{request.user}} {% endblock page %}
-</h1>
-<h3 class="d-flex justify-content-around align-items-center mt-5 mb-5">
-  {% block title%} Assigned Tasks {% endblock title %}
-</h3>
+{% extends 'app/my_todos.html' %}
+{%block title %} Assigned Tasks {% endblock %}
+{% block create_button %}
 <a class="btn btn-success mb-5" href="{% url 'create_todo' %}"> Create </a>
-<table class="table">
-  <thead>
-    <tr>
-      <th scope="col">Task No.</th>
-      <th scope="col">Title</th>
-      <th scope="col">Status</th>
-      <th scope="col">Assigned to</th>
-      <th scope="col">Priority</th>
-      <th scope="col">Due Date</th>
-      <th scope="col">Actions</th>
-    </tr>
-  </thead>
-  <tbody>
-    {% for task in todo_list %}
-    <tr>
-      <th scope="row">{{forloop.counter}}</th>
-      <td>{{task.title}}</td>
-      <td>{{task.status}}</td>
-      <td>{{task.assigned_to}}</td>
-      <td>{{task.priority}}</td>
-      <td>{{task.due_date}}</td>
-      <td>
-        <a class="btn btn-info" href="{% url 'details' task.id %}"> Details </a>
-        <a class="btn btn-warning" href="{% url 'update' task.id %}"> Edit </a>
-        <a class="btn btn-danger" href="{% url 'delete' task.id %}"> Delete </a>
-      </td>
-    </tr>
-    {% endfor %}
-  </tbody>
-</table>
-
-{% endblock content %}
+{%endblock%}
+{%block assigned_by_title %}Assigned to {%endblock%}
+{%block assigned_by_data%}{{task.assigned_to|capfirst }}{%endblock%}
+{%block assign_action%}
+<a class="btn btn-warning" href="{% url 'update' task.id %}">Edit </a>
+<a class="btn btn-danger" href="{% url 'delete' task.id %}"> Delete </a>
+{%endblock%}
