--- a/ToDo/app/templates/app/base.html
+++ b/ToDo/app/templates/app/base.html
@@ -1,64 +1,55 @@
 <!DOCTYPE html>
 {% load crispy_forms_tags %}
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>ToDo App</title>
-    <meta name="description" content="" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-  </head>
-  <body class="d-flex flex-column min-vh-100">
-    <!-- Navbar -->
-    {% include 'app/navbar.html' %}
-    <!-- Content -->
-    <div class="container">{% block content %} {% endblock content %}</div>
-    <!-- Footer -->
-    <footer class="mt-auto pt-3 text-center text-lg-start">
-      <div
-        class="text-center p-3"
-        style="background-color: rgba(0, 0, 0, 0.05)"
-      >
-        Last Login Time - {{request.last_login}}
-        <br />
-        Total Logins - {{request.visits}}
-        <br />
-        Total Requests Served - {{request.total_request}}
-      </div>
-    </footer>
-    <!-- Message -->
-    <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 1050">
-      {% if messages %} {% for message in messages %}
-      <div
-        class="alert alert-{{ message.tags }} alert-dismissible fade show"
-        role="alert"
-      >
-        {{ message }}
-      </div>
+
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <title>ToDo App</title>
+  <meta name="description" content="" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+</head>
+
+<body class="d-flex flex-column min-vh-100">
+  <!-- Navbar -->
+  {% block navbar %} {% include 'app/navbar.html' %} {% endblock %}
+  <!-- Content -->
+  <div class="container">{% block content %} {% endblock content %}</div>
+  <!-- Footer -->
+  <footer class="mt-auto pt-3 text-center text-lg-start">
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05)">
+      {% block footer %} Last Login Time - {{request.last_login}}
+      <br />
+      Total Logins - {{request.visits}}
+      <br />
+      Total Requests Served - {{request.total_request}} {% endblock %}
     </div>
-    {% endfor %} {% endif %}
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
-    <script>
-      setTimeout(function () {
-        let alerts = document.querySelectorAll(".alert");
-        alerts.forEach(function (alert) {
-          alert.classList.add("fade", "show");
-          setTimeout(() => {
-            alert.classList.remove("show");
-            alert.classList.add("hide");
-          }, 500); // Allow time for the fade-out effect
-        });
-      }, 1000);
-    </script>
-  </body>
+  </footer>
+  <!-- Message -->
+  <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 1050">
+    {% if messages %} {% for message in messages %}
+    <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+      {{ message }}
+    </div>
+  </div>
+  {% endfor %} {% endif %}
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+  </script>
+  <script>
+    setTimeout(function () {
+      let alerts = document.querySelectorAll(".alert");
+      alerts.forEach(function (alert) {
+        alert.classList.add("fade", "show");
+        setTimeout(() => {
+          alert.classList.remove("show");
+          alert.classList.add("hide");
+        }, 500); // Allow time for the fade-out effect
+      });
+    }, 1000);
+  </script>
+</body>
+
 </html>
