--- a/ToDo/app/templates/app/details.html
+++ b/ToDo/app/templates/app/details.html
@@ -1,6 +1,6 @@
 {% extends 'app/base.html' %} {% block content %}
-<div class="d-flex justify-content-center align-items-center mt-5">
-  <div class="card" style="width: 18rem">
+<div class="d-flex justify-content-center align-items-center m-5">
+  <div class="card" style="min-width: 32rem; min-height: 12rem">
     <div class="card-body">
       <h5 class="card-title">{{task.title}}</h5>
       <h6 class="card-subtitle mb-2 text-body-secondary">
