--- a/ToDo/app/templates/app/update_todo.html
+++ b/ToDo/app/templates/app/update_todo.html
@@ -1,15 +1,2 @@
-{% extends 'app/base.html' %} {% load crispy_forms_tags %} {% block content %}
-<h3 class="d-flex justify-content-center align-items-center mt-5 mb-5">
-  Update Todo
-</h3>
-<div class="row">
-  <div class="col-md-7 mx-auto">
-    <form method="post">
-      {% csrf_token %} {{form | crispy}}
-      <div class="col-md-2 mx-auto">
-        <input type="submit" value="Submit" class="btn btn-success" />
-      </div>
-    </form>
-  </div>
-</div>
-{% endblock %}
+{% extends 'app/create_todo.html'%} {% block crud_page_title %}Update
+Todo{%endblock%}
