--- a/ToDo/app/templates/app/profile.html
+++ b/ToDo/app/templates/app/profile.html
@@ -6,13 +6,7 @@
   {% block title%} Hello, {{name}}! {% endblock title %}
 </h3>
 <div class="mx-auto col-lg-3">
-  <img
-    src="{{path}}"
-    alt="Profile Picture"
-    height="320"
-    width="320"
-    style="border-radius: 100%"
-  />
+  <img src="{{path}}" alt="Profile Picture" height="320" width="320" style="border-radius: 100%" />
   <a class="btn btn-info m-5" href="{% url 'upload_profile' %}">
     Change Profile
   </a>
